[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://theme/theme_btn_pressed.tres" type="StyleBox" id=2]
[ext_resource path="res://newgame_screen/LocationPopup.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.227451, 0.227451, 0.227451, 1 )

[node name="LocationPopup" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.359
anchor_top = 0.1875
anchor_right = 0.641
anchor_bottom = 0.8125
margin_left = 0.47998
margin_top = -3.05176e-05
margin_right = -0.47998
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Items" type="ItemList" parent="Panel"]
anchor_left = 0.0121379
anchor_top = 0.0144706
anchor_right = 0.999885
anchor_bottom = 0.985
margin_left = -0.0800171
margin_top = 0.160002
margin_right = 0.133423
margin_bottom = -49.8
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Cancel" type="Button" parent="Panel"]
anchor_left = 0.0118095
anchor_top = 0.985
anchor_right = 0.488
anchor_bottom = 0.987669
margin_left = 0.0799866
margin_top = -39.8
margin_right = 0.0799561
margin_bottom = -1.61499
text = "Назад"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Accept" type="Button" parent="Panel"]
anchor_left = 0.513
anchor_top = 0.985
anchor_right = 0.988
anchor_bottom = 0.987669
margin_left = 0.0799866
margin_top = -39.8
margin_right = 0.0799561
margin_bottom = -1.61499
text = "Подтвердить"
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="item_activated" from="Panel/Items" to="." method="_on_Items_item_activated"]
[connection signal="item_selected" from="Panel/Items" to="." method="_on_Items_item_selected"]
[connection signal="pressed" from="Panel/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="Panel/Accept" to="." method="_on_Accept_pressed"]
